--- a/app/src/main/res/drawable/rounded_bg.xml
+++ b/app/src/main/res/drawable/rounded_bg.xml
@@ -13,7 +13,7 @@
     <item android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
-            <solid android:color="#424242" />
+            <solid android:color="#C5C5C5" />
             <corners android:bottomRightRadius="10dp"
                 android:bottomLeftRadius="10dp"
                 android:topRightRadius="10dp"
