--- a/app/src/main/res/layout/activity_data_transfer.xml
+++ b/app/src/main/res/layout/activity_data_transfer.xml
@@ -9,6 +9,7 @@
     tools:context=".DataTransferActivity">
 
     <TextView
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="22sp"
@@ -18,6 +19,7 @@
         android:text="Bluetooth: Connected"/>
 
     <LinearLayout
+        android:id="@+id/ll_action"
         android:padding="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
@@ -30,10 +32,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="22sp"
+            android:textColor="@color/black"
             android:fontFamily="@font/bold"
             android:layout_marginStart="10dp"
             android:text="Temperature:"/>
         <TextView
+            android:id="@+id/tv_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="22sp"
@@ -42,6 +46,25 @@
             android:text="getting data..."/>
 
     </LinearLayout>
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_pdf"
+        android:background="@drawable/rounded_bg"
+        android:layout_width="match_parent"
+        android:layout_margin="20dp"
+        android:backgroundTint="#03A9F4"
+        android:text="Generate Report"
+        android:textColor="@color/white"
+        android:fontFamily="@font/bold"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:layout_height="wrap_content"/>
+
 
 
 
